[workspace]
members = ["quinn", "quinn-proto", "quinn-udp", "bench", "perf", "fuzz", "docs/book"]
default-members = ["quinn", "quinn-proto", "quinn-udp", "bench", "perf"]
resolver = "2"

[workspace.package]
rust-version = "1.71"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/quinn-rs/quinn"
keywords = ["quic"]
categories = ["network-programming", "asynchronous"]

[workspace.dependencies]
anyhow = "1.0.98"
arbitrary = { version = "1.4.1", features = ["derive"] }
async-io = "2"
async-std = "1.13"
assert_matches = "1.5"
aws-lc-rs = { version = "1.13", default-features = false }
bencher = "0.1.5"
bytes = "1"
clap = { version = "4", features = ["derive"] }
crc = "3"
directories-next = "2"
fastbloom = "0.9"
futures-io = "0.3.31"
getrandom = { version = "0.3", default-features = false }
hdrhistogram = { version = "7.5", default-features = false }
hex-literal = "0.4"
lru-slab = "0.1.2"
lazy_static = "1"
log = "0.4"
once_cell = "1.21"
pin-project-lite = "0.2"
rand = "0.9"
rcgen = "0.13"
ring = "0.17"
rustc-hash = "2"
rustls = { version = "0.23.27", default-features = false, features = ["std"] }
rustls-pemfile = "2"
rustls-platform-verifier = "0.5"
rustls-pki-types = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
slab = "0.4.9"
smol = "2"
socket2 = "0.5"
thiserror = "2.0.12"
tinyvec = { version = "1.9", features = ["alloc"] }
tokio = { version = "1.45.0", features = ["sync"] }
tracing = { version = "0.1.41", default-features = false, features = ["std"] }
tracing-futures = { version = "0.2.5", default-features = false, features = ["std-future"] }
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["env-filter", "fmt", "ansi", "time", "local-time"] }
url = "2"
wasm-bindgen-test = { version = "0.3.50" }
web-time = "1"
windows-sys = { version = ">=0.52, <=0.59", features = ["Win32_Foundation", "Win32_System_IO", "Win32_Networking_WinSock"] }
cfg_aliases = "0.2"

[profile.bench]
debug = true

[profile.release]
debug = true
