[workspace]
members = ["quinn", "quinn-proto", "quinn-udp", "bench", "perf", "fuzz", "docs/book"]
default-members = ["quinn", "quinn-proto", "quinn-udp", "bench", "perf"]
resolver = "2"

[workspace.package]
rust-version = "1.85.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/quinn-rs/quinn"
keywords = ["quic"]
categories = ["network-programming", "asynchronous"]

[workspace.dependencies]
anyhow = "1.0"
arbitrary = { version = "1.4", features = ["derive"] }
async-io = "2.6"
assert_matches = "1.5"
aws-lc-rs = { version = "1.15", default-features = false }
bencher = "0.1.5"
bytes = "1.11"
clap = { version = "4.5", features = ["derive"] }
crc = "3.4"
directories-next = "2"
fastbloom = "0.14"
futures-io = "0.3"
getrandom = { version = "0.3", default-features = false }
hdrhistogram = { version = "7.5", default-features = false }
hex-literal = "1.1"
lru-slab = "0.1.2"
log = "0.4"
pin-project-lite = "0.2"
qlog = "0.15"
rand = "0.9"
rcgen = "0.14"
ring = "0.17"
rustc-hash = "2.1"
rustls = { version = "0.23", default-features = false, features = ["std"] }
rustls-platform-verifier = "0.6"
rustls-pki-types = "1.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
slab = "0.4"
smol = "2.0"
socket2 = ">=0.5, <0.7"
thiserror = "2.0"
tinyvec = { version = "1.10", features = ["alloc"] }
tokio = { version = "1.49", features = ["sync"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-futures = { version = "0.2", default-features = false, features = ["std-future"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "ansi", "time", "local-time"] }
url = "2.5"
wasm-bindgen-test = { version = "0.3" }
web-time = "1.1"
windows-sys = { version = ">=0.52, <=0.61", features = ["Win32_Foundation", "Win32_System_IO", "Win32_Networking_WinSock"] }
cfg_aliases = "0.2"

[profile.bench]
debug = true

[profile.release]
debug = true

[workspace.lints.rust]
elided_lifetimes_in_paths = "warn"
# https://rust-fuzz.github.io/book/cargo-fuzz/guide.html#cfgfuzzing
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }
unnameable_types = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
manual_let_else = "warn"
or_fun_call = "warn"
use_self = "warn"
